bug 111816: Function.prototype.toString returns extra newlines. Moving the newlines into Decompile to preserve the output of new Script().toString(). r=shaver sr+a=brendan